--- a/problem/index.html
+++ b/problem/index.html
@@ -18,6 +18,9 @@
         <div id="header"><p>Dog Breed Quiz</p></div>
     </header>
     <main></main>
+
+    <div id="feedback"></div>
+
     <footer>
         <p>The Dog Breed Quiz is made possible thanks to the free API by <a href="https://teaching.maumt.se/apis/access/">DOG CEO Zine</a></p>
     </footer>
