Added a feedback_background tag for CSS.

--- a/problem/index.html
+++ b/problem/index.html
@@ -10,7 +10,7 @@
     <title>U1</title>
 </head>
 <body>
-
+<div id="feedback_background">
     <header>
         <div id="icon">
             <img src="media/logo.png">
@@ -26,6 +26,7 @@
     <footer>
         <p>The Dog Breed Quiz is made possible thanks to the free API by <a href="https://teaching.maumt.se/apis/access/">DOG CEO Zine</a></p>
     </footer>
+</div>
 
     <script src="js/data.js"></script>
     <script src="js/server_connection.js"></script>
