--- a/problem/index.html
+++ b/problem/index.html
@@ -10,7 +10,11 @@
     <title>U1</title>
 </head>
 <body>
-<div id="feedback_background">
+    <div id="feedback_background">
+        <div id="feedback">
+        </div>
+</div>
+    <div id="wrapper">
     <header>
         <div id="icon">
             <img src="media/logo.png">
@@ -19,11 +23,9 @@
     </header>
     <main></main>
 
-    <div id="feedback">
-    </div>
 
     <footer>
-        <p>The Dog Breed Quiz is made possible thanks to the free API by <a href="https://teaching.maumt.se/apis/access/">DOG CEO Zine</a></p>
+        <p>The Dog Breed Quiz is made possible thanks to the free API by <a href="https://dog.ceo/dog-api/">DOG CEO Zine</a></p>
     </footer>
 </div>
 
